<resources>
    <string name="app_name">MS Core 1.0</string>
    <string name="login_email_hint">USUÁRIO</string>
    <string name="login_pw_hint">SENHA</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="nome_representante">Nome Representante</string>
    <string name="versao_app">Versão: 1.0</string>
    <string name="communicate">Communicate</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_clientes_sub">Módulo de listagem de clienteBases</string>
    <string name="menu_pedidos">Pedidos</string>
    <string name="menu_historicos">Históricos</string>
    <string name="menu_titulos">Títulos</string>
    <string name="menu_catalogo">Catálogo</string>
    <string name="menu_produtos">Produtos</string>
    <string name="menu_sincronizacao">Sincronização</string>
    <string name="menu_sair">Sair</string>
    <string name="menu_header_pedidos">    Pedidos</string>
    <string name="menu_header_clientes">    Clientes / Contatos</string>
    <string name="menu_header_pesquisas">    Pesquisas</string>
    <string name="menu_header_ferramentas">    Ferramentas</string>
    <string name="menu_home_sub">Novidades e parâmetros</string>
    <string name="menu_catalogo_sub">Acompanhe as informações dos produtos e suas caracteristicas</string>
    <string name="menu_historicos_sub">Pesquise pelos historicos de vendas</string>
    <string name="menu_pedidos_sub">Acompanhe aqui a sua lista de pedidos.</string>
    <string name="menu_titulos_sub">Acompanhe aqui a lista de títulos.</string>
    <string name="menu_produtos_sub">Grade de produtos</string>
    <string name="menu_sincronizacao_sub">Use este módulo para receber / transmitir informações.</string>
    <string name="menu_sair_sub">Informações gerais de acesso.</string>
    <string name="menu_excluir">EXCLUIR</string>
    <string name="menu_detalhes">DETALHES</string>
    <string name="sobre_pedido">INFORMAÇÕES ADICIONAIS SOBRE O PEDIDO</string>

    <!-- TODO: criar os campos de valroes -->
    <string name="monetario_float2">R$ %1$,.2f</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_section_basic">BÁSICO</string>
    <string name="register_section_localization">LOCALIZAÇÃO</string>
    <string name="register_section_financial">FINANCEIRO</string>
    <string name="register_section_contacts">CONTATOS</string>
    <string name="cancelar">CANCELAR</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="sync_module_novidades_header">RECEBER NOVIDADES</string>
    <string name="btn_transmitir">TRANSMITIR</string>
    <string name="sync_module_clientes_header">TRANSMITIR CLIENTES</string>
    <string name="sync_module_clientes_content">Use esta rotina para enviar informações de clienteBases para o servidor.</string>
    <string name="sync_module_pedidos_header">TRANSMITIR PEDIDOS</string>
    <string name="sync_module_pedidos_content">Use esta rotina para enviar informações de pedidos para o servidor.</string>
    <string name="sync_module_sync_header">SINCRONIZAR INFORMAÇÕES</string>
    <string name="btn_sincronizar">SINCRONIZAR</string>
    <string name="cliente_create_nome">NOME</string>
    <string name="cliente_create_fantasia">FANTASIA</string>
    <string name="cliente_create_tipo">TIPO</string>
    <string name="cliente_create_cpf_cnpj">CPF/CNPJ</string>
    <string name="cliente_create_endereco">ENDEREÇO</string>
    <string name="cliente_create_bairro">BAIRRO</string>
    <string name="cliente_create_numero">NÚMERO</string>
    <string name="cliente_create_cep">CEP</string>
    <string name="cliente_create_estado">ESTADO</string>
    <string name="cliente_create_cidade">CIDADE</string>
    <string name="cliente_create_suframa">SUFRAMA</string>
    <string name="cliente_create_inscricao">INSCRIÇÃO</string>
    <string name="cliente_create_telefone">TELEFONE</string>
    <string name="cliente_create_email">EMAIL</string>
    <string name="menu_clientes_create">Cadastro de Clientes</string>
    <string name="menu_clientes_create_sub">Insira informações cadastrais aqui.</string>
    <string name="menu_adicionar">ADICIONAR</string>
    <string name="menu_pedido_ativo">ABRIR PEDIDO ATIVO</string>
    <string name="btn_enviar">ENVIAR</string>
    <string name="pedido_cabecalho_tipo_pedido">TIPO PEDIDO</string>
    <string name="pedido_cabecalho_nome_cliente">NOME CLIENTE</string>
    <string name="pedido_cabecalho_condicao_pagamento">CONDIÇÃO PAGAMENTO</string>
    <string name="pedido_cabecalho_ordem_compra">ORDEM DE COMPRA</string>
    <string name="register_section_transporte">TRANSPORTE</string>
    <string name="pedido_cabecalho_transportadora">TRANSPORTADORA</string>
    <string name="pedido_cabecalho_modalidade">MODALIDADE</string>
    <string name="register_section_observacoes">OBSERVAÇÕES</string>
    <string name="pedido_cabecalho_observacao">OBSERVAÇÕES</string>
    <string name="register_section_valores_basicos">VALORES BÁSICOS</string>
    <string name="pedido_cabecalho_total_liquido">TOTAL LÍQUIDO</string>
    <string name="pedido_cabecalho_total_bruto">TOTAL BRUTO</string>
    <string name="pedido_cabecalho_total_imposto_ipi">TOTAL IMPOSTO IPI</string>
    <string name="register_section_valores_impostos">VALORES IMPOSTOS</string>
    <string name="pedido_cabecalho_total_imposto_difal">TOTAL IMPOSTO DIFAL</string>
    <string name="pedido_cabecalho_total_imposto_st">TOTAL IMPOSTO ST</string>
    <string name="register_section_valores_transporte">TOTAL VALOR TRANSPORTE</string>
    <string name="pedido_cabecalho_total_transporte">VALOR TOTAL TRANSPORTE</string>
    <string name="register_section_demais_valores">DEMAIS VALORES</string>
    <string name="pedido_cabecalho_valor_comissao">VALOR COMISSÃO</string>
    <string name="register_section_valores_condicao_pagamento">DIFERENCIAL CONDIÇÃO PAGAMENTO</string>
    <string name="pedido_cabecalho_diferencial_valor">DIFERENCIAL CONDIÇÃO PAGAMENTO</string>
    <string name="register_section_descontos_e_acrescimos"><![CDATA[DESCONTOS & ACRÉSCIMOS]]></string>
    <string name="pedido_cabecalho_acrescimo">ACRÉSCIMO</string>
    <string name="pedido_cabecalho_desconto">DESCONTO</string>
    <string name="pedido_cabecalho_quantidade">QTD.</string>
    <string name="pedido_cabecalho_preco_unitario">PRÇ. UNI.</string>
    <string name="pedido_cabecalho_preco_total">TOTAL</string>
    <string name="register_section_itens_pedido">ITENS DO PEDIDO</string>
    <string name="action_option_finalizar_pedido">FINALIZAR PEDIDO</string>
    <string name="action_option_itens">ITENS DO PEDIDO</string>
    <string name="action_option_cancelar">CANCELAR PEDIDO</string>
    <string name="selecione_um_cliente">Selecione um Cliente</string>
    <string name="selecione_um_tipo_pedido">Selecione um tipo de pedido</string>
    <string name="selecione_uma_transportadora">Selecione uma Transportadora</string>
    <string name="pedido_item_dscricao">Descrição</string>


</resources>
