<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/menu_home" />
        </menu>
    </item>


    <item android:title="@string/menu_header_clientes">
        <menu>
            <item
                android:id="@+id/nav_clientes"
                android:icon="@drawable/ic_clientes"
                android:title="@string/menu_clientes" />
        </menu>
    </item>

    <item android:title="@string/menu_header_pedidos">
        <menu>
            <item
                android:id="@+id/nav_lista_pedidos"
                android:icon="@drawable/ic_pedidos"
                android:title="@string/menu_pedidos" />

            <item
                android:id="@+id/nav_historicos"
                android:icon="@drawable/ic_historicos"
                android:title="@string/menu_historicos" />

            <item
                android:id="@+id/nav_titulos"
                android:icon="@drawable/ic_dinheiro"
                android:title="@string/menu_titulos" />
        </menu>
    </item>

    <item android:title="@string/menu_header_pesquisas">
        <menu>
            <item
                android:id="@+id/nav_catalogo"
                android:icon="@drawable/ic_catalogo"
                android:title="@string/menu_catalogo"/>

            <item
                android:id="@+id/nav_produtos"
                android:icon="@drawable/ic_produtos"
                android:title="@string/menu_produtos" />
        </menu>
    </item>

    <item android:title="@string/menu_header_ferramentas">
        <menu>
            <item
                android:id="@+id/nav_sincronizacao"
                android:icon="@drawable/ic_sincronizacao"
                android:title="@string/menu_sincronizacao" />

            <item
                android:id="@+id/nav_sair"
                android:icon="@drawable/ic_sair"
                android:title="@string/menu_sair" />
        </menu>
    </item>

</menu>
